# FuckAndroidAVSample

./: .gitignore  FFmpegNativeMethodRegister.h  README.MD  README_DOC.MD  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/top/av/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/top/av/: App.kt  MainActivity.kt
app/src/main/java/com/top/av/adapter/: FFmpegRecyclerViewAdapter.java  OpenGLRecyclerViewAdapter.java
app/src/main/java/com/top/av/bean/: FFmpegCommand.kt
app/src/main/java/com/top/av/ui/: AWindowNativeVideoPlayerActivity.kt  CpuFeatureActivity.kt  DecoderEncoderActivity.kt  ExoPlayerActivity.kt  FFmpegInfoActivity.kt  MainActivity.kt  OpenGLESActivity.kt  VideoEditorActivity.kt  VideoPlayerActivity.kt  VideoPlayerActivity_back.kt  WebRTCActivity.kt
app/src/main/java/com/top/av/webrtc/: SdpResponse.kt  TAG.kt  WebRTCClient.kt  ZLMAndroidWebRTCClient.kt
app/src/main/res/drawable/: ic_media_info.xml  ic_selected.xml
app/src/main/res/layout/: activity_a_native_window_video_player.xml  activity_cpu_feature.xml  activity_decoder_encoder.xml  activity_exo_player.xml  activity_ffmpeg_info.xml  activity_main.xml  activity_open_gl.xml  activity_video_editor.xml  activity_video_player.xml  activity_video_player_back.xml  activity_web_rtc.xml  dialog_media_info.xml  dialog_sample_selected_layout.xml
app/src/main/res/menu/: menu_ffmpeg_main.xml  menu_opengl_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/top/av/: ExampleUnitTest.kt
ffmpeg/: ffmpeg_info.c
ffmpegLibrary422/: build.gradle
ffmpegLibrary422/libs/armeabi-v7a/: ffmpeg.txt
ffmpegLibrary422/src/androidTest/java/com/top/ffmpeglibrary422/: ExampleInstrumentedTest.kt
ffmpegLibrary422/src/main/: AndroidManifest.xml
ffmpegLibrary422/src/main/cpp/: CMakeLists.txt  FFmpegNativeMethodRegister.h  NativeMethodRegister.cpp  OpenGLNativeMethodRegister.h  cmd.cpp  native-lib.cpp
ffmpegLibrary422/src/main/cpp/abii/: Abidetect.h
ffmpegLibrary422/src/main/cpp/cpu/: CMakeLists.txt  ffmpegkit_abidetect.cpp  ffmpegkit_abidetect.h  list_cpu_features.c  list_cpu_features.h
ffmpegLibrary422/src/main/cpp/ffmpeg/: ffmpeg_info.c  ffmpeg_info.h  ffmpegkit.c  ffmpegkit.h  ffmpegkit_exception.c  ffmpegkit_exception.h  ffprobekit.c  ffprobekit.h
ffmpegLibrary422/src/main/cpp/ffmpeg2/: ffmpegkit.c  ffmpegkit.h  ffmpegkit_abidetect.h  ffprobekit.c
ffmpegLibrary422/src/main/cpp/ffmpeg_cmd/: FFmpegCmd.c  com_top_ffmpeg_cmd.h  ffmpeg_thread.h
ffmpegLibrary422/src/main/cpp/ffmpegkits/: FFmpegKits.c  FFmpegKits.h  ffmpeg_thread.c  ffprobe_thread.c  ffprobe_thread.h
ffmpegLibrary422/src/main/cpp/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  ffprobe.c
ffmpegLibrary422/src/main/cpp/gles/: CMakeLists.txt  GLUtils.cpp  GLUtils.h  ImageDef.h  OpenGLNativeMethodRegister.cpp  OpenGLNativeMethodRegister.h  SuperGLRenderContext.cpp  SuperGLRenderContext.h  SuperNativeRender.cpp  SuperNativeRender.h  TriangleSample.cpp  TriangleSample.h
ffmpegLibrary422/src/main/cpp/ijkmedia/: CMakeLists.txt
ffmpegLibrary422/src/main/cpp/ijkmedia/ijkj4a/: CMakeLists.txt
ffmpegLibrary422/src/main/cpp/ijkmedia/ijkplayer/: ff_ffplay.c
ffmpegLibrary422/src/main/cpp/ijkmedia/ijkplayer/ijkavformat/: ijkasync.c
ffmpegLibrary422/src/main/cpp/include/: config.h
ffmpegLibrary422/src/main/cpp/include/compat/: va_copy.h
ffmpegLibrary422/src/main/cpp/include/libavformat/: avformat.h
ffmpegLibrary422/src/main/cpp/include/libavutil/: ffversion.h
ffmpegLibrary422/src/main/cpp/include/libffmpeg/: config.h
ffmpegLibrary422/src/main/cpp/log/: android_log.h
ffmpegLibrary422/src/main/cpp/logger/: logger.h
ffmpegLibrary422/src/main/cpp/player/: CMakeLists.txt  FFMediaPlayer.cpp  FFMediaPlayer.h  MediaPlayer.h  Player.cpp  Player.h  PlayerNativeMethodRegister.cpp  PlayerNativeMethodRegister.h
ffmpegLibrary422/src/main/cpp/player/decoder/: Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
ffmpegLibrary422/src/main/cpp/player/decoder/audio/: AudioDecoder.cpp  AudioDecoder.h
ffmpegLibrary422/src/main/cpp/player/decoder/video/: VideoDecoder.cpp  VideoDecoder.h
ffmpegLibrary422/src/main/cpp/player/mediaplayer/: FFMediaPlayer.cpp  FFMediaPlayer.h  MediaPlayer.h
ffmpegLibrary422/src/main/cpp/player/render/: NativeRender.cpp  NativeRender.h  VideoRender.h
ffmpegLibrary422/src/main/cpp/player/render/audio/: AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
ffmpegLibrary422/src/main/cpp/utils/: CMakeLists.txt  ImageDef.h  TimeUtils.cpp  TimeUtils.h
ffmpegLibrary422/src/main/java/com/top/ffmpeg/: Cmd.java  CmdList.java  FFmpeg.java  FFmpegCmd.java  FFmpegCmds.java  FFmpegKits.java  VideoKit.kt  fff.kt
ffmpegLibrary422/src/main/java/com/top/ffmpeg/config/: Config.java
ffmpegLibrary422/src/main/java/com/top/ffmpeg/decoder/: BaseDecoder.java  DecodeState.java  IDecoder.java  IExtractor.java  LeoThread.java
ffmpegLibrary422/src/main/java/com/top/ffmpeg/entity/: Picture.java  Video.java
ffmpegLibrary422/src/main/java/com/top/ffmpeg/ffmpeg/: Abi.java  AbiDetect.java  AbstractSession.java  AsyncFFmpegExecuteTask.java  AsyncFFprobeExecuteTask.java  AsyncGetMediaInformationTask.java  CameraSupport.java  Chapter.java  FFmpegKit.java  FFmpegKitConfig.java  FFmpegLog.java  FFmpegNative.java  FFmpegSession.java  Level.java  (+21 more)
ffmpegLibrary422/src/test/java/com/top/ffmpeglibrary422/: ExampleUnitTest.kt
fftoolssssss/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg_videotoolbox.c  ffplay.c  ffprobe.c  ffserver.c
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: .gitignore  README.MD  help.txt  init-android-libyuv.sh  init-android-x264.sh  init-android.sh  init-config.sh
ijkplayer/android/contrib/: compile-ffmpeg.sh  compile-x264.sh
ijkplayer/android/contrib/tools/: do-compile-ffmpeg.sh  do-detect-env.sh
ijkplayer/config/: module-4.2.2.sh  module-leo.sh  module.sh
(+21 files in other folders)
